force-app/main/default/objects/DocuSign_Org_Settings__c/DocuSign_Org_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>SSC-501</description>
    <label>DocuSign Org Settings</label>
</CustomObject>