force-app/main/default/objects/DocuSign_Org_Settings__c/fields/DocuSign_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Account_Id__c</fullName>
    <label>DocuSign Account Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>