force-app/main/default/objects/DocuSign_Org_Settings__c/fields/DocuSign_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Base_URL__c</fullName>
    <label>DocuSign Base URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>