force-app/main/default/objects/DocuSign_Org_Settings__c/fields/DocuSign_Integrator_Key__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Integrator_Key__c</fullName>
    <label>DocuSign Integrator Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>