force-app/main/default/objects/DocuSign_Org_Settings__c/fields/DocuSign_PassWord__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_PassWord__c</fullName>
    <label>DocuSign PassWord</label>
    <length>100</length>
    <type>Text</type>
</CustomField>