force-app/main/default/objects/DocuSign_Org_Settings__c/fields/DocuSign_User_Name__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_User_Name__c</fullName>
    <label>DocuSign User Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>